# broadway-project

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  results.json  streamlit_app.py
.github/workflows/: docs.yml
data/raw/: Broadway_Data.csv
docs/: BroadwayInsights.qmd  analysis.md  index.md  reference.md  tutorial.md
src/broadway_insights/: __init__.py  analysis.py  data.py  viz.py
tests/: test_analysis.py  test_data.py
