[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broadway-insights"
version = "0.1.0"
description = "Broadway revenue and theater capacity analysis with an installable Python package and Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ethan Nelson" },
  { name = "Jessie Olsen" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
dashboard = [
  "plotly>=5.0",
  "streamlit>=1.32",
]
dev = [
  "pytest>=8.0",
  "mkdocs>=1.6",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
broadway_insights = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
